# zidongbiaoding

./: README.md
img_findPixelCoprdinate_D/: CMakeLists.txt  main.cpp
img_findPoint_D/: CMakeLists.txt  Tsai.cpp  Tsai.h  angle.txt  data.txt  findPoint.cpp  findPoint.h  get_Rt.cpp  get_Rt.h  kmeans.cpp  kmeans.h  main.cpp  point.cpp  point.h  quaternion.h  result.txt
img_grubImg_D/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  readme.txt  readme.txt~
img_grubImg_D/.kdev4/: grubImg.kdev4  grubImg_2.kdev4
img_grubImg_D/data/: readme.txt~
img_grubImg_D/data/cloud_pcd/: 14.pcd  7.pcd  9.pcd
